2012-07-19  Dan Espen  <despen@verizon.net>

	* fvwm-menu-desktop.1.in:  Applied patch from Thomas Funk.
	Functionality for configuration tool for fvwm-menu-desktop.
	Two new options:
	- get-menus [selected, all] to send the found menus to the config gui
	- set-menus [filelist] to tell fvwm-menu-desktop which menus should be
	built.
	Also another option --insert-in-menu NAME.


2012-07-12  Dan Espen  <despen@verizon.net>

	* fvwm-menu-desktop.in: Applied patch from Thomas Funk.
	Menu titles.  Verbose fixups.  Build all menus by default.

2012-07-11  Dan Espen  <despen@verizon.net>

	* fvwm-menu-desktop.1.in: First pass on new man page.
	* fvwm-menu-desktop.in: Set #! correctly.

2012-06-29  Dan Espen  <despen@verizon.net>

	* fvwm-menu-desktop.in: fix usage.

2012-06-26  Dan Espen  <despen@verizon.net>

	* fvwm-menu-desktop.in:
	Apply rest Thomas Funk patch 1 and 2.
	change --desktop to xfe, gnome.
	add --menu-type application.

2012-06-24  Dan Espen  <despen@verizon.net>

	* fvwm-menu-desktop.in (main): When root menu doesn't exist,
	print a clear error message and exit.
	(parsemenu): Eliminate %U in exec strings
	(parsemenu): Use printtext.
	(geticonfile): run mkdir for users icon cache.
	Based on Patch 1 from Thomas Funk.

2012-06-22  Dan Espen  <despen@verizon.net>

	* fvwm-menu-desktop.in:
	Rewrite using python and xdg libs.

2012-01-18  Thomas Adam  <thomas@fvwm.org>
	* fvwm-config.in:
	* fvwm-config.1.in:
	Remove --is-final, --is-released, --is-stable from fvwm-config

	It no longer makes sense to report on this information, given how fvwm
	is developed.

2011-12-30  Thomas Adam  <thomas@fvwm.org>
	* fvwm-menu-desktop.in:
	Remove redundant stat(2) calls when performing file-system checks for
	constructing XDG menus.

2011-11-03  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm-perllib.in:
	used @SED@ from configure.ac

2011-05-07    <despen@verizon.net>
	* fvwm-menu-desktop.1.in: Some updates, needs a lot of work. Later.
	* fvwm-menu-desktop.in: